Adicionado o categoriabean